[tool.poetry]
name = "bongkar-cloud-providers"
version = "0.1.0"
description = ""
authors = ["Tegar Imansyah <egar.imansyah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
